异常信息上传

--- a/QElectricity-sys/charge-web/src/main/resources/application-dev.properties
+++ b/QElectricity-sys/charge-web/src/main/resources/application-dev.properties
@@ -3,9 +3,9 @@
 #spring.datasource.ams.password=rootQE123456
 
 #mac mysql
-spring.datasource.ams.url=jdbc:mysql://127.0.0.1:3306/ams?useUnicode=true&characterEncoding=UTF-8&useSSL=false&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+spring.datasource.ams.url=jdbc:mysql://47.75.87.139:3306/ams?useUnicode=true&characterEncoding=UTF-8&useSSL=false&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 spring.datasource.ams.username=root
-spring.datasource.ams.password=root
+spring.datasource.ams.password=123456
 
 #JWT\u914D\u7F6E\u5C5E\u6027\u76F8\u5173
 jwt.secret=61D73234C4F93E03074D74D74D1E39D9
@@ -13,4 +13,6 @@ jwt.secret=61D73234C4F93E03074D74D74D1E39D9
 jwt.expire=7
 #\u5B58\u50A8 token,\u5B58\u5728 header \u4E2D\u7684\u53C2\u6570
 jwt.header=token
+
+fixImg.path=C:/Users/sir/Desktop/img/
 
