--- a/QElectricity-sys/charge-web/src/main/resources/application-prod.properties
+++ b/QElectricity-sys/charge-web/src/main/resources/application-prod.properties
@@ -9,3 +9,5 @@ jwt.expire=7
 #\u5B58\u50A8 token,\u5B58\u5728 header \u4E2D\u7684\u53C2\u6570
 jwt.header=token
 
+fixImg.path="C:\Users\sir\Desktop\img\"
+
