代理商d订单记录页接口 done

--- a/QElectricity-sys/charge-web/src/main/resources/application.properties
+++ b/QElectricity-sys/charge-web/src/main/resources/application.properties
@@ -13,3 +13,6 @@ mybatis.config-location=classpath:mybatis/config/mybatis-config.xml
 mybatis.type-aliases-package=com.charge.entity
 logging.level.com.charge.dao.mapper=debug
 
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=GMT+8
+
