--- a/QElectricity-sys/charge-service/pom.xml
+++ b/QElectricity-sys/charge-service/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>charge-dao</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.3.5</version>
+        </dependency>
 
     </dependencies>
 
