renamed EditShopController2.java to EditShopController.java

--- a/QElectricity-sys/charge-web/src/main/resources/application-dev.properties
+++ b/QElectricity-sys/charge-web/src/main/resources/application-dev.properties
@@ -16,5 +16,7 @@ jwt.header=token
 
 
 #\u6545\u969C\u56FE\u7247\u8DEF\u5F84
-fixImg.path=/Users/vincent/program/java/img/
+fixImg.path=/Users/vincent/program/java/img/fix
+#\u521B\u5EFA\u5546\u6237\u56FE\u7247\u8DEF\u5F84
+shopImg.path=/Users/vincent/program/java/img/shop
 
