--- a/QElectricity-sys/charge-web/src/main/resources/application.properties
+++ b/QElectricity-sys/charge-web/src/main/resources/application.properties
@@ -16,3 +16,11 @@ logging.level.com.charge.dao.mapper=debug
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
 
+####   \u8FD9\u8868\u793A\u53EA\u6709\u9759\u6001\u8D44\u6E90\u7684\u8BBF\u95EE\u8DEF\u5F84\u4E3A/resources/**\u65F6\uFF0C\u624D\u4F1A\u5904\u7406\u8BF7\u6C42
+####   \u8BBF\u95EEurl:ip:/resources/\u56FE\u7247\u540D\u79F0
+#spring.mvc.static-path-pattern=/resources/**
+#
+#### spring.resources.static-locations
+#### \u7528\u4E8E\u544A\u8BC9Spring \u8D56\u4E8E\u914D\u7F6E\u7684\u5148\u540E\u987A\u5E8F\u4F9D\u6B21\u8FDB\u884C\uFF0C\u9ED8\u8BA4\u7684\u5B98\u65B9\u914D\u7F6E\u5982\u4E0B\uFF1A
+#spring.resources.static-locations=classpath:/static,classpath:/public,classpath:/resources,classpath:/META-INF/resources
+
