微信支付接口

--- a/QElectricity-sys/charge-web/src/main/resources/application-dev.properties
+++ b/QElectricity-sys/charge-web/src/main/resources/application-dev.properties
@@ -16,7 +16,16 @@ jwt.header=token
 
 
 #\u6545\u969C\u56FE\u7247\u8DEF\u5F84
-fixImg.path=/Users/vincent/program/java/img/fix
+fixImg.path=C:/Users/sir/Desktop/img/
 #\u521B\u5EFA\u5546\u6237\u56FE\u7247\u8DEF\u5F84
 shopImg.path=/Users/vincent/program/java/img/shop
+
+#\u5C0F\u7A0B\u5E8Fid
+wx.pay.appId=wx7d498f7ffd96b40e
+#\u5546\u6237api\u5BC6\u94A5
+wx.pay.key=qwer4321qdxiaochengxu20182018xcx
+#\u5546\u6237id
+wx.pay.mchId=1514872221
+#\u8BC1\u4E66\u5730\u5740
+wx.pay.certPath=
 
