--- a/QElectricity-sys/charge-common/pom.xml
+++ b/QElectricity-sys/charge-common/pom.xml
@@ -23,6 +23,12 @@
             <version>${commons.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>jdom</groupId>
+            <artifactId>jdom</artifactId>
+            <version>1.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
