--- a/QElectricity-sys/pom.xml
+++ b/QElectricity-sys/pom.xml
@@ -124,7 +124,11 @@
             <version>${lombok.version}</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.3</version>
+        </dependency>
 
     </dependencies>
     <!-- 添加项目jdk编译插件 -->
