****************自己测试阶段一**************************** 1:用户首页测试done... 2:商户首页done... 3:故障信息上报  done... 4:借充电宝接口done... wait to communication device 5:还充电宝接口done... 6:socketToSys接口 done...
**********代理商端小程序接口联调阶段一*******************
1:还有涉及到支付和编辑商户信息的接口没调...

 优化代码

--- a/QElectricity-sys/charge-web/src/main/resources/application-dev.properties
+++ b/QElectricity-sys/charge-web/src/main/resources/application-dev.properties
@@ -3,7 +3,8 @@
 #spring.datasource.ams.password=rootQE123456
 
 #mac mysql
-spring.datasource.ams.url=jdbc:mysql://127.0.0.1:3306/ams?useUnicode=true&characterEncoding=UTF-8&useSSL=false&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+spring.datasource.ams.url=jdbc:mysql://127.0.0.1:3306/ams?\
+  useUnicode=true&characterEncoding=UTF-8&useSSL=false&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 spring.datasource.ams.username=root
 spring.datasource.ams.password=root
 
