--- a/QElectricity-sys/.gitignore
+++ b/QElectricity-sys/.gitignore
@@ -29,4 +29,4 @@ QElectricity-sys/charge-entity/target/
 QElectricity-sys/charge-service/target/
 QElectricity-sys/charge-web/target/
 *.iml
-/.idea/workspace.xml
+/.idea/
